<resources>
    <string name="app_name">Air Roasters</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="about_us_heading">Finally, after 700 years change is in the air!</string>
    <string name="about_us_body" formatted="false">For over 700 years people have essentially been roasting coffee beans under a fire. Even to this very day over 95% of the world’s coffee beans are roasted in a (usually gas) fired drum.\n\n You would think that after 700 years they’d perfect the technique, but the fact is that the drum roasting is and always will be, an imperfect process.\n\n Fortunately our company sits in the “other 5%” category.\n\n We are AIR ROASTERS. We roast the world’s best Arabica beans in, you guessed it…air.\n\n Superheated air to be precise and the result is a game changer.\n\n Because, perhaps for the first time in your life, you’ll be able to experience the full flavour of roasted coffee beans without them being tipped, scorched or the husk compromising the taste.\n\n But no more words…take a look at the video and decide for your self.</string>
    <string name="contact_us">Contact Us</string>
    <string name="order_history">Order History</string>
    <string name="my_account">My Account</string>
    <string name="home">Home</string>
    <string name="your_order">Your Order</string>
    <string name="about_us">About Us</string>
    <string name="buy_beans">Buy Beans</string>
    <string name="buy_pod">Buy Pod</string>
    <string name="pod_fundraising">Pod Fundraising</string>
    <string name="wholesale">Wholesale</string>
    <string name="buy_products">Buy Products</string>
    <string name="account">Account</string>
</resources>
